hphp/test/zend7/Zend/tests/type_declarations/weak_include_strict.php.expectf

Fatal error: %s
Stack trace:
#0 %s(%d): takes_int(1)
#1 %s(%d): require('%s')
#2 {main}
  thrown in %sweak_include_strict_2.inc on line 5